# bluez-qt

./: .git-blame-ignore-revs  .gitignore  .gitlab-ci.yml  .kde-ci.yml  .reviewboardrc  CMakeLists.txt  KF5BluezQtConfig.cmake.in  KF5QBluezConfig.cmake.in  KF6BluezQtConfig.cmake.in  README.md  bluez.categories  metainfo.yaml
autotests/: CMakeLists.txt  adaptertest.cpp  adaptertest.h  agentmanagertest.cpp  agentmanagertest.h  autotests.cpp  autotests.h  batterytest.cpp  batterytest.h  devicetest.cpp  devicetest.h  gattcharacteristicremotetest.cpp  gattcharacteristicremotetest.h  gattdescriptorremotetest.cpp  gattdescriptorremotetest.h  gattmanagertest.cpp  gattmanagertest.h  gattserviceremotetest.cpp  gattserviceremotetest.h  inputtest.cpp  inputtest.h  jobstest.cpp  jobstest.h  leadvertisingmanagertest.cpp  leadvertisingmanagertest.h  managertest.cpp  managertest.h  mediaplayertest.cpp  mediaplayertest.h  mediatest.cpp  mediatest.h  mediatransporttest.cpp  mediatransporttest.h  obexmanagertest.cpp  obexmanagertest.h  qmltests.cpp
autotests/fakebluez/: CMakeLists.txt  adapterinterface.cpp  adapterinterface.h  agentmanager.cpp  agentmanager.h  batteryinterface.cpp  batteryinterface.h  deviceinterface.cpp  deviceinterface.h  devicemanager.cpp  devicemanager.h  fakebluez.cpp  fakebluez.h  gattcharacteristicinterface.cpp  gattcharacteristicinterface.h  gattdescriptorinterface.cpp  gattdescriptorinterface.h  gattmanagerinterface.cpp  gattmanagerinterface.h  gattserviceinterface.cpp  gattserviceinterface.h  inputinterface.cpp  inputinterface.h  leadvertisingmanagerinterface.cpp  leadvertisingmanagerinterface.h  main.cpp  media.cpp  media.h  mediainterface.cpp  mediainterface.h  mediaplayerinterface.cpp  mediaplayerinterface.h  mediatransportinterface.cpp  mediatransportinterface.h  obexagentmanager.cpp  obexagentmanager.h  obexclient.cpp  obexclient.h  object.cpp  object.h  (+6 more)
autotests/interfaces/: org.bluez.Adapter1.xml  org.bluez.GattCharacteristic1.xml  org.bluez.GattDescriptor1.xml  org.bluez.GattService1.xml  org.bluez.Input1.xml  org.bluez.MediaPlayer1.xml  org.bluez.MediaTransport1.xml
autotests/qml/: TestUtils.qml  tst_adapter.qml  tst_device.qml  tst_input.qml  tst_manager.qml  tst_mediaplayer.qml  utils.js
docs/: Doxyfile.local
src/: CMakeLists.txt  a2dp-codecs.c  a2dp-codecs.h  adapter.cpp  adapter.h  adapter_p.cpp  adapter_p.h  adapterinfo.cpp  adapterinfo.h  agent.cpp  agent.h  agentadaptor.cpp  agentadaptor.h  battery.cpp  battery.h  battery_p.h  bluez-qt-index.qdoc  bluez-qt.qdoc  bluezqt-index.qdoc  bluezqt.qdoc  bluezqt.qdocconf  bluezqt_dbustypes.h  debug.cpp  debug.h  debug_p.cpp  debug_p.h  device.cpp  device.h  device_p.cpp  device_p.h  deviceinfo.cpp  deviceinfo.h  devicesmodel.cpp  devicesmodel.h  gattapplication.cpp  gattapplication.h  gattapplication_p.cpp  gattapplication_p.h  gattcharacteristic.cpp  gattcharacteristic.h  (+135 more)
src/imports/: CMakeLists.txt  DevicesModel.qml  bluezqtextensionplugin.cpp  bluezqtextensionplugin.h  bluezqtextensionplugin2.qrc  bluezqtextensionplugin_qmldir  declarativeadapter.cpp  declarativeadapter.h  declarativebattery.cpp  declarativebattery.h  declarativedevice.cpp  declarativedevice.h  declarativedevicesmodel.cpp  declarativedevicesmodel.h  declarativeinput.cpp  declarativeinput.h  declarativemanager.cpp  declarativemanager.h  declarativemediaplayer.cpp  declarativemediaplayer.h  qbluezextensionplugin.cpp  qbluezextensionplugin.h  qmldir
src/interfaces/: org.bluez.Adapter1.xml  org.bluez.Battery1.xml  org.bluez.Device1.xml  org.bluez.GattCharacteristic1.xml  org.bluez.GattDescriptor1.xml  org.bluez.GattManager1.xml  org.bluez.GattService1.xml  org.bluez.LEAdvertisement1.xml  org.bluez.LEAdvertisingManager1.xml  org.bluez.Media1.xml  org.bluez.MediaEndpoint1.xml  org.bluez.MediaPlayer1.xml  org.bluez.MediaTransport1.xml  org.bluez.ProfileManager1.xml  org.bluez.obex.AgentManager1.xml  org.bluez.obex.Client1.xml  org.bluez.obex.FileTransfer1.xml  org.bluez.obex.ObjectPush1.xml  org.bluez.obex.PhonebookAccess1.xml  org.bluez.obex.Session1.xml  org.bluez.obex.Transfer1.xml  org.freedesktop.DBus.ObjectManager.xml
tests/: CMakeLists.txt  adaptersreceiver.cpp  adaptersreceiver.h  adaptertest.cpp  adaptertest.h  chatprofile.cpp  chatprofile.h  devicereceiver.cpp  devicereceiver.h  devicereceivertest.cpp  devicereceivertest.h  leserver.cpp  leserver.h  managertest.cpp  mediaendpointconnector.cpp  mediaendpointconnector.h
tools/bluezapi2qt/: BluezApiParser.cpp  BluezApiParser.h  CMakeLists.txt  Comment.cpp  Comment.h  CppGenerator.cpp  CppGenerator.h  Interface.cpp  Interface.h  Method.cpp  Method.h  Methods.cpp  Methods.h  Parameter.cpp  Parameter.h  Properties.cpp  Properties.h  Property.cpp  Property.h  TODO  TypeAnnotation.cpp  TypeAnnotation.h  XmlGenerator.cpp  XmlGenerator.h  main.cpp
